--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,11 @@
 version: "3.8"
 
 services:
-  pinocchio:
-    container_name: pinocchio
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "4200:80"
-    restart: always
-    depends_on:
-      - nginx
-
   nginx:
     image: nginx:alpine
-    container_name: nginx
+    container_name: pinocchio
     ports:
-      - "8080:80"
+      - "4200:80" # Serve on port 4200
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./dist:/usr/share/nginx/html:ro
