--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: "3.8"
+version: "3.3"
 
 services:
   nginx:
     image: nginx:alpine
     container_name: pinocchio
     ports:
-      - "4200:80" # Serve on port 4200
+      - "4200:80"  # Expose Angular app on port 4200
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./dist:/usr/share/nginx/html:ro
