--- a/nginx.conf
+++ b/nginx.conf
@@ -36,7 +36,7 @@ http {
         listen       80;
         server_name  localhost;
 
-        root   /usr/share/nginx/html;
+        root   /usr/share/nginx/html/pinocchio/browser;
 
         location / {
             try_files $uri $uri/ /index.html =404;
