--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,16 +12,21 @@ jobs:
       - name: ⬇️ Checkout code
         uses: actions/checkout@v3
 
+      - name: 📦 Build Angular App (Locally)
+        run: |
+          npm install --legacy-peer-deps
+          npm run build
+
       - name: 📂 Copy files to remote server
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "."
+          source: "dist/,nginx.conf,docker-compose.yml"
           target: "~/pinocchio"
 
-      - name: 🚀 Run docker-compose on server
+      - name: 🚀 Deploy on Server (Force Cleanup + Rebuild)
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -29,5 +34,9 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd ~/pinocchio
-            docker-compose down || true
-            docker-compose up --build -d
+            # Force remove old containers and volumes
+            docker-compose down --volumes --remove-orphans --rmi local || true
+            # Clean up dangling images
+            docker image prune -f
+            # Rebuild and start fresh
+            docker-compose up -d --force-recreate
