--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "@auth0/angular-jwt": "^5.2.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
+    "chart.js": "^4.4.9",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "date-fns": "^4.1.0",
     "environments": "^1.2.7",
     "lucide-angular": "^0.503.0",
+    "ng2-charts": "^8.0.0",
     "ngx-mask": "^19.0.6",
     "ngx-mat-select-search": "^7.0.10",
     "ngx-toastr": "^19.0.0",
